; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cyapa/extr_cyapa.c_cyapa_cdevpriv_dtor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cyapa/extr_cyapa.c_cyapa_cdevpriv_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cyapa_cdevpriv = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"cyapa cdevpriv should not be NULL!\00", align 1
@M_CYAPA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @cyapa_cdevpriv_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cyapa_cdevpriv_dtor(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cyapa_cdevpriv*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.cyapa_cdevpriv*
  store %struct.cyapa_cdevpriv* %5, %struct.cyapa_cdevpriv** %3, align 8
  %6 = load %struct.cyapa_cdevpriv*, %struct.cyapa_cdevpriv** %3, align 8
  %7 = icmp ne %struct.cyapa_cdevpriv* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @KASSERT(i32 %8, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.cyapa_cdevpriv*, %struct.cyapa_cdevpriv** %3, align 8
  %11 = getelementptr inbounds %struct.cyapa_cdevpriv, %struct.cyapa_cdevpriv* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = call i32 @cyapa_lock(%struct.TYPE_3__* %12)
  %14 = load %struct.cyapa_cdevpriv*, %struct.cyapa_cdevpriv** %3, align 8
  %15 = getelementptr inbounds %struct.cyapa_cdevpriv, %struct.cyapa_cdevpriv* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, -1
  store i32 %19, i32* %17, align 4
  %20 = load %struct.cyapa_cdevpriv*, %struct.cyapa_cdevpriv** %3, align 8
  %21 = getelementptr inbounds %struct.cyapa_cdevpriv, %struct.cyapa_cdevpriv* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = call i32 @cyapa_unlock(%struct.TYPE_3__* %22)
  %24 = load %struct.cyapa_cdevpriv*, %struct.cyapa_cdevpriv** %3, align 8
  %25 = load i32, i32* @M_CYAPA, align 4
  %26 = call i32 @free(%struct.cyapa_cdevpriv* %24, i32 %25)
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @cyapa_lock(%struct.TYPE_3__*) #1

declare dso_local i32 @cyapa_unlock(%struct.TYPE_3__*) #1

declare dso_local i32 @free(%struct.cyapa_cdevpriv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
